# jaroku

./: .gitignore  README-1.md  jarokudoc.md
client/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/src/: App.tsx  index.css  types.ts  vite-env.d.ts
client/src/components/: BuildPane.tsx  CodeOverlay.tsx  CodeViewer.tsx  CommandPalette.tsx  DiffCard.tsx  FileTree.tsx  GraphView.tsx  RightPanel.tsx  RunTrigger.tsx  Sidebar.tsx  StateDiff.tsx  StatusBar.tsx  StepDetail.tsx  StepDetailPanel.tsx  StepRow.tsx  TopBar.tsx  TraceTimeline.tsx
client/src/lib/: agentStatus.ts  format.ts  icons.tsx  socket.ts  stateDiff.ts  traceGraphMap.ts
client/src/store/: buildStore.ts  chatStore.ts  graphStore.ts  traceStore.ts  uiStore.ts
runtime/: pyproject.toml
runtime/agents/: __init__.py
runtime/agents/example_agent/: .env.example  README.md  __init__.py  agent.py  jaroku.json  pyproject.toml
runtime/agents/example_agent/prompts/: __init__.py  system.md
runtime/agents/example_agent/tools/: __init__.py  notes.py
runtime/jaroku_interceptor/: __init__.py  callback.py  env.py  schema.py
runtime/jaroku_runner/: __init__.py  __main__.py  contract.py  fake.py  graph.py  guard.py  models.py
runtime/test_agent/: agent.py
runtime/tool_templates/: __init__.py  catalog.json  gmail.py  postgres.py  slack.py
schema/: events.md
server/: debug-client.html  package-lock.json  package.json  tsconfig.json
server/fixtures/: README.md  edit-noop.txt  edit-prompt-tweak.txt  edit-real-connector-bait.txt  edit-real-limit.txt  edit-syntax-error.txt  edit-touches-connector.txt  edit-weather-units.txt  rejected-import-time-failure.txt  rejected-tool-call-and-sql.txt  support_bot.txt
server/src/: agents.ts  claude.ts  connectors.ts  editor.ts  env.ts  fileProtocol.test.ts  fileProtocol.ts  generator.ts  graphIntrospect.ts  index.ts  processManager.ts  projectFs.ts  prompt.ts  store.ts  types.ts  validator.ts  wsRelay.ts
