[project]
name = "jaroku-runtime"
version = "0.1.0"
description = "Jaroku Python runtime: LangGraph test agent + event interceptor"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jaroku_interceptor", "test_agent"]
