[project]
name = "jaroku-runtime"
version = "0.1.0"
description = "Jaroku Python runtime: LangGraph test agent + event interceptor"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
]

# Connector SDKs. Kept out of the base install so the trace pipeline and the dry-run path
# never depend on them; each template lazy-imports its SDK and returns a clear message if
# it is absent. Install with:  uv sync --extra connectors
[project.optional-dependencies]
connectors = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "slack-sdk>=3.26.0",
    "psycopg[binary]>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jaroku_interceptor", "jaroku_runner", "tool_templates", "test_agent"]
